# jsonfarmer

./: .gitignore  README.md  pyproject.toml
jsonfarmer/: Jsonfarmer.ipynb  dataset.json  model.py
notebooks/: Jsonfarmer.ipynb
